--- a/package.json
+++ b/package.json
@@ -3,12 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "fortawesome/react-fontawesome",
+    "@react-navigation/web": "^1.0.0-alpha.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "draft-js": "^0.11.5",
+    "html-to-draftjs": "^1.5.0",
+    "jquery": "^3.5.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-charts": "^2.0.0-beta.6",
+    "react-chat-widget": "^3.0.1",
+    "react-component-countdown-timer": "^0.1.8",
+    "react-custom-scroll": "^4.2.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-geolocated": "^3.0.1",
+    "react-navigation": "^4.3.8",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-phone-number-input": "^3.0.22",
+    "react-redux": "^7.2.0",
+    "react-ribbons": "^1.0.6",
+    "react-router-dom": "^5.1.2",
+    "react-rte": "^0.16.1",
+    "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
+    "react-slick": "^0.25.2",
+    "react-summernote": "^2.0.0",
+    "reactjs-captcha": "^1.3.1",
+    "reactstrap": "^8.4.1",
+    "rsuite": "^4.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
