--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-summernote": "^2.0.0",
     "reactjs-captcha": "^1.3.1",
     "reactstrap": "^8.4.1",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "rsuite": "^4.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
